# glrenderer

./: CMakeLists.txt  README.md
src/: device.cpp  device.h  format.h  predefined_shaders.cpp  shader.cpp  texture.cpp  vertex_buffer.cpp
