CMAKE_MINIMUM_REQUIRED(VERSION 3.1)

PROJECT(SSGLRenderer)

SET(LOCAL_SOURCES_FILES
	src/device.h
	src/device.cpp

	src/vertex_buffer.cpp

	src/shader.cpp
	src/predefined_shaders.cpp
	)

LINK_DIRECTORIES(${LUA_LIB})

ADD_LIBRARY(SSGLRenderer
	SHARED
	${LOCAL_SOURCES_FILES}
)

TARGET_LINK_LIBRARIES(SSGLRenderer SSCore)

IF(SS_HAVE_OUTPUT_DIRECTORY)
	SET_TARGET_PROPERTIES(
		SSGLRenderer
		PROPERTIES
		RUNTIME_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		LIBRARY_OUTPUT_DIRECTORY $ENV{SS_BINARY_PATH}
		ARCHIVE_OUTPUT_DIRECTORY $ENV{SS_ARCHIVE_PATH}
		PDB_OUTPUT_DIRECTORY $ENV{SS_PDB_PATH}
		)
ENDIF(SS_HAVE_OUTPUT_DIRECTORY)

SET_PROPERTY(TARGET SSGLRenderer PROPERTY FOLDER "Renderers")
